source/parser/Parser_Expr.cpp
//
// Created by Vladimir Arsenijevic on 28.5.2026.
//

#include "Parser.h"
#include <iostream>


bool Parser::isLambdaAhead() const {
    if (parsingCaseLabel_) return false;   // inside a case label, `( … ) ->` is not a lambda
    if (!check(TokenType::LEFT_PAREN)) return false;
    int depth = 0;
    size_t k = current;
    for (; k < tokens.size(); ++k) {
        if (tokens[k].type == TokenType::LEFT_PAREN)       depth++;
        else if (tokens[k].type == TokenType::RIGHT_PAREN) { if (--depth == 0) { ++k; break; } }
    }
    return k < tokens.size() && tokens[k].type == TokenType::ARROW;
}

std::vector<std::pair<Token, std::optional<Token>>> Parser::parseLambdaParamList() {
    consume(TokenType::LEFT_PAREN, "expected '(' in lambda parameters");
    std::vector<std::pair<Token, std::optional<Token>>> params;
    if (!check(TokenType::RIGHT_PAREN)) {
        do {
            // Typed `Type name` vs untyped `name` (type inferred from the expected signature).
            size_t span = typeSpanAt(current);
            if (span > 0 && current + span < tokens.size()
                && tokens[current + span].type == TokenType::IDENTIFIER) {
                Token type = consumeType();
                Token name = consume(TokenType::IDENTIFIER, "expected parameter name");
                params.emplace_back(name, std::optional<Token>(type));
            } else {
                Token name = consume(TokenType::IDENTIFIER, "expected lambda parameter name");
                params.emplace_back(name, std::nullopt);
            }
        } while (match({ TokenType::COMMA }));
    }
    consume(TokenType::RIGHT_PAREN, "expected ')' after lambda parameters");
    return params;
}

Expr Parser::parseLambda() {
    int line = peek().line;
    return finishLambda(parseLambdaParamList(), line);
}

Expr Parser::finishLambda(std::vector<std::pair<Token, std::optional<Token>>> params, int line) {
    if (capturing_) throw error(peek(), "nested lambdas are not supported");
    consume(TokenType::ARROW, "expected '->' in lambda");
    // Optional explicit return type; otherwise inferred from the expected signature (else void).
    std::optional<Token> explicitRet;
    if (isTypeName()) explicitRet.emplace(consumeType());

    // Resolve parameter types: explicit where written, otherwise from the callee's `Call(…)` bound.
    bool anyUntyped = false;
    for (const auto& p : params) if (!p.second) { anyUntyped = true; break; }
    if (anyUntyped && !expectedLambdaSig_)
        throw error(params.empty() ? peek() : params.front().first,
                    "cannot infer this lambda's parameter types here; annotate them "
                    "(e.g. (i32 x) -> …) or pass the lambda to a Call-bounded function");
    if ((anyUntyped || !explicitRet) && expectedLambdaSig_
        && expectedLambdaSig_->first.size() != params.size())
        throw error(params.empty() ? peek() : params.front().first,
                    "lambda has " + std::to_string(params.size())
                    + " parameter(s) but the expected signature has "
                    + std::to_string(expectedLambdaSig_->first.size()));

    std::vector<ParamDecl> methodParams;
    for (size_t i = 0; i < params.size(); ++i) {
        Token ptype = params[i].second ? *params[i].second : expectedLambdaSig_->first[i];
        methodParams.push_back(ParamDecl{ ptype, params[i].first, /*isMut=*/false, /*isVariadic=*/false, nullptr });
    }
    Token retType = explicitRet ? *explicitRet
                  : (expectedLambdaSig_ ? expectedLambdaSig_->second
                                        : Token{ TokenType::VOID, "void", line });

    consume(TokenType::LEFT_BRACE, "expected '{' before lambda body");

    // Seed the body scope with the lambda's parameters, then capture free variables by value.
    pendingScopeSeed_.clear();
    for (const ParamDecl& p : methodParams) pendingScopeSeed_.emplace_back(p.name.lexeme, p.typeName);
    capturing_   = true;
    captureBase_ = scopes_.size();   // the body scope parseBlockBody pushes is the lambda's own
    captures_.clear();
    BlockStmt body = parseBlockBody();
    std::vector<std::pair<std::string, Token>> caps = std::move(captures_);
    capturing_ = false;

    std::string lname = "__lambda_" + std::to_string(gen_->lambdaCounter++);
    classNames.insert(lname);
    gen_->lambdaClassNames.insert(lname);   // shared, so monomorphization's re-parse recognizes it
    Token lnameTok{ TokenType::IDENTIFIER, lname, line };

    // class __lambda_N { <capture fields>; __lambda_N(<caps>) { this.cap = cap; … } }
    std::deque<FieldDecl> fields;
    for (const auto& [cn, ct] : caps)
        fields.push_back(FieldDecl{ /*isPublic=*/true, /*isStatic=*/false, /*isMut=*/false,
                                    ct, Token{ TokenType::IDENTIFIER, cn, line }, nullptr });

    std::deque<MethodDecl> classMethods;
    if (!caps.empty()) {
        std::vector<ParamDecl> ctorParams;
        std::vector<std::unique_ptr<Stmt>> ctorBody;
        for (const auto& [cn, ct] : caps) {
            ctorParams.push_back(ParamDecl{ ct, Token{ TokenType::IDENTIFIER, cn, line }, false, false, nullptr });
            // this.cap = cap;
            ctorBody.push_back(std::make_unique<Stmt>(makeStmt(ExprStmt{ makeExpr(MemberAssignExpr{
                box(makeExpr(ThisExpr{ Token{ TokenType::THIS, "this", line } })),
                Token{ TokenType::IDENTIFIER, cn, line },
                box(makeExpr(IdentifierExpr{ Token{ TokenType::IDENTIFIER, cn, line } })) }) })));
        }
        classMethods.push_back(MethodDecl{
            /*isPublic=*/true, /*isConstructor=*/true, /*isDestructor=*/false, /*isStatic=*/false,
            /*isMut=*/false, /*hasBody=*/true, lnameTok /*ctor ret = class name*/,
            Token{ TokenType::IDENTIFIER, lname, line }, std::move(ctorParams),
            BlockStmt{ std::move(ctorBody) }, /*hasReturnSlot=*/false, "" });
    }
    pendingLambdaDecls_.push_back(makeStmt(ClassDeclStmt{ lnameTok, std::move(fields), std::move(classMethods) }));

    // impl Call for __lambda_N { fn call(<params>) -> <ret> { <body> } }  (canonicalized trait)
    std::vector<Token> paramTypes;
    for (const ParamDecl& p : methodParams) paramTypes.push_back(p.typeName);
    std::string canon = canonicalCallTrait(paramTypes, retType);
    std::deque<MethodDecl> implMethods;
    implMethods.push_back(MethodDecl{
        /*isPublic=*/true, /*isConstructor=*/false, /*isDestructor=*/false, /*isStatic=*/false,
        /*isMut=*/false, /*hasBody=*/true, retType,
        Token{ TokenType::IDENTIFIER, "call", line },
        std::move(methodParams), std::move(body), /*hasReturnSlot=*/false, "" });
    pendingLambdaDecls_.push_back(makeStmt(ImplDeclStmt{
        Token{ TokenType::IDENTIFIER, canon, line }, lnameTok, std::move(implMethods) }));

    // Replace the lambda with `__lambda_N(capturedVars…)` — a stack value object.
    std::vector<std::unique_ptr<Expr>> ctorArgs;
    for (const auto& [cn, ct] : caps)
        ctorArgs.push_back(box(makeExpr(IdentifierExpr{ Token{ TokenType::IDENTIFIER, cn, line } })));
    return makeExpr(CallExpr{ lnameTok, std::move(ctorArgs) });
}

// ============================================================
// Expression parsers
// ============================================================

Expr Parser::parseExpression() {
    // Leading declaration modifiers: `static` (C-style static local) and `mut`
    // (reassignable binding). Either order is accepted; both unambiguously
    // introduce a VarDeclExpr.
    bool isStatic = false;
    bool isMut    = false;
    for (;;) {
        if (!isStatic && match({ TokenType::STATIC })) { isStatic = true; continue; }
        if (!isMut    && match({ TokenType::MUT    })) { isMut    = true; continue; }
        break;
    }

    // Inferred local: `var name = expr;`  (const by default; `mut var` / `var mut` for mutable).
    // The type is left as a `var` sentinel token and deduced from the initializer by the semantic
    // analyzer, which records the synthesized type token for codegen. An initializer is required —
    // there is nothing to infer from otherwise.
    if (match({ TokenType::VAR })) {
        Token varTok = previous();
        if (!isMut) isMut = match({ TokenType::MUT });   // accept `var mut` as well as `mut var`
        Token name = consume(TokenType::IDENTIFIER, "expected variable name after 'var'");
        consume(TokenType::EQUAL, "an inferred 'var' declaration requires an initializer");
        std::unique_ptr<Expr> initializer = box(parseExpression());
        recordLocal(varTok, name);
        return makeExpr(VarDeclExpr{ varTok, name, std::move(initializer),
                                     /*arraySize=*/0, isStatic, isMut });
    }

    // Array declaration: typeName [ NUMBER ] IDENTIFIER ( = expr )?
    if (isTypeName() && peekNext().type == TokenType::LEFT_BRACKET) {
        Token  typeName  = advance();
        consume(TokenType::LEFT_BRACKET, "expected '[' after type name");
        Token  sizeToken = consume(TokenType::NUMBER, "expected integer array size");
        unsigned long long arraySizeMag = 0;
        if (!parseIntegerLiteral(sizeToken.lexeme, arraySizeMag))
            throw error(sizeToken, "invalid array size '" + sizeToken.lexeme + "'");
        size_t arraySize = static_cast<size_t>(arraySizeMag);
        consume(TokenType::RIGHT_BRACKET, "expected ']' after array size");
        Token  name      = consume(TokenType::IDENTIFIER, "expected variable name after array type");
        std::unique_ptr<Expr> initializer = nullptr;
        if (match({ TokenType::EQUAL })) initializer = box(parseExpression());
        recordLocal(typeName, name);
        return makeExpr(VarDeclExpr{ typeName, name, std::move(initializer), arraySize, isStatic, isMut });
    }

    // Variable declaration of any type form: <type> IDENTIFIER ...
    //   where <type> is  Base | Base& | Vec<args> | Vec<args>&
    size_t declSpan = typeSpanAt(current);
    if (declSpan > 0 && current + declSpan < tokens.size()
        && tokens[current + declSpan].type == TokenType::IDENTIFIER) {
        Token typeName = consumeType();   // consumes <args> and/or trailing '&'
        Token name     = advance();
        std::unique_ptr<Expr> initializer = nullptr;
        if (match({ TokenType::EQUAL })) {
            initializer = box(parseExpression());
        } else if ((check(TokenType::LEFT_PAREN) || check(TokenType::LEFT_BRACE))
                   && classNames.count(typeName.lexeme) > 0) {
            // Constructor call syntax: ClassName varName(args)  or  ClassName varName{args}.
            // Braces are an alternate delimiter for the same positional constructor call.
            bool      brace = check(TokenType::LEFT_BRACE);
            TokenType close = brace ? TokenType::RIGHT_BRACE : TokenType::RIGHT_PAREN;
            advance();  // consume '(' or '{'
            // Braces stay positional; `ClassName v(...)` accepts named arguments.
            std::vector<Token> argNames;
            std::vector<bool>  argSpreads;
            std::vector<std::unique_ptr<Expr>> args =
                parseCallArgs(argNames, close, /*allowNames=*/!brace, &argSpreads);
            // A constructor can never itself be pack-bearing (packs are free-function-only) —
            // unconditionally unwrap any spread.
            for (bool s : argSpreads) if (s) { unwrapSpreadArgs(args, argNames, argSpreads); break; }
            // Store as a CallExpr whose callee lexeme == class name — semantic pass detects this
            initializer = box(makeExpr(CallExpr{ typeName, std::move(args), std::move(argNames) }));
        }
        recordLocal(typeName, name);
        return makeExpr(VarDeclExpr{ typeName, name, std::move(initializer), /*arraySize=*/0, isStatic, isMut });
    }

    if (isStatic || isMut)
        throw error(peek(), "expected a variable declaration after '"
                    + std::string(isStatic ? "static" : "mut") + "'");
    return parseAssignment();
}

Expr Parser::parseAssignment() {
    // Assignment: IDENTIFIER ( = | += | -= | ... ) assignment
    if (check(TokenType::IDENTIFIER)) {
        TokenType nextTokenType = peekNext().type;
        bool isAssignmentOperator =
            nextTokenType == TokenType::EQUAL           ||
            nextTokenType == TokenType::PLUS_EQUAL      || nextTokenType == TokenType::MINUS_EQUAL      ||
            nextTokenType == TokenType::STAR_EQUAL      || nextTokenType == TokenType::SLASH_EQUAL      ||
            nextTokenType == TokenType::PERCENT_EQUAL   || nextTokenType == TokenType::CARET_EQUAL      ||
            nextTokenType == TokenType::AMPERSAND_EQUAL || nextTokenType == TokenType::PIPE_EQUAL;

        if (isAssignmentOperator) {
            Token name          = advance();
            Token operatorToken = advance();
            Expr value = parseAssignment();    // right-associative
            if (operatorToken.type == TokenType::EQUAL)
                return makeExpr(AssignExpr{ name, box(std::move(value)) });
            else
                return makeExpr(CompoundAssignExpr{ name, operatorToken, box(std::move(value)) });
        }
    }
    Expr expression = parseTernary();

    // Indexed assignment: arr[i] = expr (detected after parsing the LHS)
    if (expression.node && std::holds_alternative<IndexExpr>(*expression.node)
        && check(TokenType::EQUAL)) {
        advance();  // consume =
        auto indexNode = std::move(std::get<IndexExpr>(*expression.node));
        Expr value = parseAssignment();  // right-associative
        return makeExpr(IndexAssignExpr{
            std::move(indexNode.object),
            std::move(indexNode.index),
            box(std::move(value))
        });
    }

    // Member assignment: obj.field = expr (detected after parsing obj.field LHS)
    if (expression.node && std::holds_alternative<MemberAccessExpr>(*expression.node)
        && check(TokenType::EQUAL)) {
        advance();  // consume =
        auto& ma = std::get<MemberAccessExpr>(*expression.node);
        Expr value = parseAssignment();  // right-associative
        return makeExpr(MemberAssignExpr{
            std::move(ma.object), ma.field, box(std::move(value))
        });
    }

    // Store through a reference-valued expression: `<expr> = value` where <expr> is not a plain
    // name/index/member (e.g. a call returning `ref T` — `v.at(i) = x`). Semantic analysis verifies
    // the target evaluates to a reference/borrow and stores the value into the referent.
    if (expression.node && check(TokenType::EQUAL)) {
        Token op = advance();  // consume =
        Expr value = parseAssignment();  // right-associative
        return makeExpr(RefStoreExpr{ box(std::move(expression)), op, box(std::move(value)) });
    }

    return expression;
}

// Ternary `cond ? a : b` — sits between assignment and Elvis; right-associative. Desugars to a
// switch EXPRESSION `switch (cond) { case true -> a; default -> b; }`, so it reuses all of the
// switch-expression machinery (bool scrutinee, result-type unification, exhaustiveness via `default`,
// and the codegen result-slot lowering) — no new semantic/codegen. `cond` is a full Elvis-level
// expression; the middle is a full expression; the else branch recurses (right-associative), so
// `a ? b : c ? d : e` parses as `a ? b : (c ? d : e)`.
Expr Parser::parseTernary() {
    Expr cond = parseElvis();
    if (!match({ TokenType::QUESTION })) return cond;

    Token q = previous();
    Expr thenExpr = parseAssignment();   // middle: a full expression (terminated by ':')
    consume(TokenType::COLON, "expected ':' in ternary expression 'cond ? a : b'");
    Expr elseExpr = parseTernary();      // right-associative

    // `case true -> thenExpr`
    std::vector<std::unique_ptr<Expr>> thenLabels;
    thenLabels.push_back(box(makeExpr(LiteralExpr{ Token{ TokenType::TRUE, "true", q.line } })));
    SwitchArm thenArm{ std::move(thenLabels), /*isDefault=*/false,
                       box(std::move(thenExpr)), /*block=*/nullptr,
                       Token{ TokenType::ARROW, "->", q.line } };
    // `default -> elseExpr`
    SwitchArm elseArm{ {}, /*isDefault=*/true,
                       box(std::move(elseExpr)), /*block=*/nullptr,
                       Token{ TokenType::ARROW, "->", q.line } };

    std::deque<SwitchArm> arms;
    arms.push_back(std::move(thenArm));
    arms.push_back(std::move(elseArm));

    return makeExpr(SwitchExpr{ Token{ TokenType::SWITCH, "switch", q.line },
                                box(std::move(cond)), std::move(arms) });
}

// Elvis `a ?: b` — sits just below assignment, above logical-or; right-associative.
Expr Parser::parseElvis() {
    Expr left = parseLogicalOr();
    if (match({ TokenType::QUESTION_COLON })) {
        Token op = previous();
        Expr right = parseElvis();   // right-associative: a ?: b ?: c == a ?: (b ?: c)
        return makeExpr(ElvisExpr{ box(std::move(left)), op, box(std::move(right)) });
    }
    return left;
}

Expr Parser::parseLogicalOr() {
    Expr left = parseLogicalAnd();
    while (match({ TokenType::OR })) {
        Token operatorToken = previous();
        left = makeExpr(BinaryExpr{ box(std::move(left)), operatorToken, box(parseLogicalAnd()) });
    }
    return left;
}

Expr Parser::parseLogicalAnd() {
    Expr left = parseBitwiseOr();
    while (match({ TokenType::AND })) {
        Token operatorToken = previous();
        left = makeExpr(BinaryExpr{ box(std::move(left)), operatorToken, box(parseBitwiseOr()) });
    }
    return left;
}

Expr Parser::parseBitwiseOr() {
    Expr left = parseBitwiseXor();
    while (match({ TokenType::PIPE })) {
        Token operatorToken = previous();
        left = makeExpr(BinaryExpr{ box(std::move(left)), operatorToken, box(parseBitwiseXor()) });
    }
    return left;
}

Expr Parser::parseBitwiseXor() {
    Expr left = parseBitwiseAnd();
    while (match({ TokenType::CARET })) {
        Token operatorToken = previous();
        left = makeExpr(BinaryExpr{ box(std::move(left)), operatorToken, box(parseBitwiseAnd()) });
    }
    return left;
}

Expr Parser::parseBitwiseAnd() {
    Expr left = parseEquality();
    while (match({ TokenType::AMPERSAND })) {
        Token operatorToken = previous();
        left = makeExpr(BinaryExpr{ box(std::move(left)), operatorToken, box(parseEquality()) });
    }
    return left;
}

Expr Parser::parseEquality() {
    Expr left = parseComparison();
    while (match({ TokenType::EQUAL_EQUAL, TokenType::BANG_EQUAL })) {
        Token operatorToken = previous();
        left = makeExpr(BinaryExpr{ box(std::move(left)), operatorToken, box(parseComparison()) });
    }
    return left;
}

Expr Parser::parseComparison() {
    Expr left = parseShift();
    while (match({ TokenType::LESS, TokenType::LESS_EQUAL,
                   TokenType::GREATER, TokenType::GREATER_EQUAL })) {
        Token operatorToken = previous();
        left = makeExpr(BinaryExpr{ box(std::move(left)), operatorToken, box(parseShift()) });
    }
    return left;
}

Expr Parser::parseShift() {
    Expr left = parseAddSub();
    while (match({ TokenType::SHIFT_LEFT, TokenType::SHIFT_RIGHT })) {
        Token operatorToken = previous();
        left = makeExpr(BinaryExpr{ box(std::move(left)), operatorToken, box(parseAddSub()) });
    }
    return left;
}

Expr Parser::parseAddSub() {
    Expr left = parseMulDiv();
    while (match({ TokenType::PLUS, TokenType::MINUS })) {
        Token operatorToken = previous();
        left = makeExpr(BinaryExpr{ box(std::move(left)), operatorToken, box(parseMulDiv()) });
    }
    return left;
}

Expr Parser::parseMulDiv() {
    Expr left = parseCast();
    while (match({ TokenType::STAR, TokenType::SLASH, TokenType::PERCENT })) {
        Token operatorToken = previous();
        left = makeExpr(BinaryExpr{ box(std::move(left)), operatorToken, box(parseCast()) });
    }
    return left;
}

Expr Parser::parseCast() {
    Expr expr = parseUnary();
    while (check(TokenType::AS)) {
        advance();  // consume 'as'
        bool isMut = match({ TokenType::MUT });   // `expr as mut T` — mutable reference view
        if (!isTypeName()) throw error(peek(), "expected type name after 'as'");
        Token targetType = consumeType();          // supports Class& / ptr<T> / generics
        expr = makeExpr(CastExpr{ box(std::move(expr)), targetType, isMut });
    }
    return expr;
}

Expr Parser::parseUnary() {
    if (match({ TokenType::BANG, TokenType::MINUS, TokenType::TILDE,
                TokenType::INCREMENT, TokenType::DECREMENT })) {
        Token operatorToken = previous();
        return makeExpr(UnaryExpr{ operatorToken, box(parseUnary()) });
    }
    return parsePostfix();
}

Expr Parser::parsePostfix() {
    Expr expression = parsePrimary();
    for (;;) {
        // Subscript access on any expression: expr[index]  (arrays, ptr<T>, this.field, …)
        if (check(TokenType::LEFT_BRACKET)) {
            advance();  // consume [
            Expr indexExpr = parseExpression();
            consume(TokenType::RIGHT_BRACKET, "expected ']' after index");
            expression = makeExpr(IndexExpr{ box(std::move(expression)), box(std::move(indexExpr)) });
            continue;
        }
        // Postfix ++ and --
        if (match({ TokenType::INCREMENT, TokenType::DECREMENT })) {
            expression = makeExpr(PostfixExpr{ box(std::move(expression)), previous() });
            continue;
        }
        // Non-null assertion: `x!!` — unwrap a nullable, aborting if null. Recognised as two
        // consecutive `!` AFTER an expression (prefix `!!x` is parsed by parseUnary as double-NOT
        // and never reaches here).
        if (check(TokenType::BANG) && peekNext().type == TokenType::BANG) {
            Token op = advance();   // first '!'
            advance();              // second '!'
            expression = makeExpr(UnwrapExpr{ box(std::move(expression)), op });
            continue;
        }
        // Member access / call via `.`, `?.` (safe), or `::` (static scope resolution).
        // Lowered to the same nodes; `?.` sets the `safe` flag (null-propagating).
        if (check(TokenType::DOT) || check(TokenType::QUESTION_DOT) || check(TokenType::COLON_COLON)) {
            bool safe = check(TokenType::QUESTION_DOT);
            advance();  // consume '.', '?.' or '::'
            Token member = consume(TokenType::IDENTIFIER, "expected member name after '.'");

            // Generic-method call `recv.m<T…>(args)` / `Class::m<T…>(args)`: resolve the receiver's
            // class at parse time (parser-visible receivers only), mangle the method, queue the
            // instantiation, and emit a MethodCallExpr whose method token is the mangled name. Gated
            // so `recv.m < x` (a comparison of a field named `m`) still parses as less-than.
            if (gen_->genericMethodNames.count(member.lexeme) && check(TokenType::LESS)) {
                std::string recvClass;
                if (const auto* id = std::get_if<IdentifierExpr>(expression.node.get())) {
                    if (classNames.count(id->name.lexeme) || gen_->classNames.count(id->name.lexeme))
                        recvClass = id->name.lexeme;                       // static form `Class::m<T>()`
                    else if (auto t = deduceArgTypeToken(&expression)) recvClass = genericArgBaseName(*t);
                } else if (auto t = deduceArgTypeToken(&expression)) {     // `this`, bare field, etc.
                    recvClass = genericArgBaseName(*t);
                }
                std::string baseClass = recvClass.substr(0, recvClass.find('$'));   // Array$i32 → Array
                bool haveMethod = !recvClass.empty()
                               && gen_->genericMethodKeys.count(baseClass + "::" + member.lexeme) > 0;
                // Does a well-formed `<…>` close and get followed by `(`? Then it's unambiguously a
                // generic-method-call SHAPE — `name<…>(` — rather than a `<` comparison. (Note a
                // comparison of that exact shape, `field < X > (…)`, is always an invalid chained
                // comparison `(field < X) > (…)` — bool vs numeric — so treating it as a generic call
                // here never rejects a VALID program; it only yields a clearer generic-method error.)
                auto looksLikeGenericCall = [&]() -> bool {
                    size_t j = current + 1; int d = 1;   // `current` is the '<'
                    while (j < tokens.size() && d > 0) {
                        TokenType t = tokens[j].type;
                        if (t == TokenType::LESS) d++;
                        else if (t == TokenType::GREATER) d--;
                        else if (t == TokenType::SHIFT_RIGHT) d -= 2;
                        j++;
                    }
                    return d <= 0 && j < tokens.size() && tokens[j].type == TokenType::LEFT_PAREN;
                };
                if (haveMethod || looksLikeGenericCall()) {
                    if (!haveMethod) {
                        if (recvClass.empty())
                            throw error(member, "cannot determine the receiver's type for a "
                                "generic-method call to '" + member.lexeme + "'; bind the receiver to "
                                "a local first (generic-method calls need a parser-visible receiver)");
                        throw error(member, "class '" + baseClass + "' has no generic method '"
                                    + member.lexeme + "'");
                    }
                    std::vector<std::vector<Token>> typeArgs = parseTypeArgList();
                    std::string mangledMethod = mangleInstantiation(member.lexeme, typeArgs);
                    recordMethodInstantiation(recvClass, member.lexeme, mangledMethod, std::move(typeArgs));
                    consume(TokenType::LEFT_PAREN, "expected '(' after generic-method type arguments");
                    std::vector<Token> gmNames;
                    std::vector<bool>  gmSpreads;
                    std::vector<std::unique_ptr<Expr>> gmArgs =
                        parseCallArgs(gmNames, TokenType::RIGHT_PAREN, /*allowNames=*/true, &gmSpreads);
                    for (bool s : gmSpreads) if (s) { unwrapSpreadArgs(gmArgs, gmNames, gmSpreads); break; }
                    expression = makeExpr(MethodCallExpr{
                        box(std::move(expression)),
                        Token{ TokenType::IDENTIFIER, mangledMethod, member.line },
                        std::move(gmArgs), std::move(gmNames), safe });
                    continue;
                }
                // else: a `<` comparison of a member named like a generic method — fall through.
            }

            if (check(TokenType::LEFT_PAREN)) {
                advance();  // consume '('
                std::vector<Token> argNames;
                std::vector<bool>  argSpreads;
                std::vector<std::unique_ptr<Expr>> args =
                    parseCallArgs(argNames, TokenType::RIGHT_PAREN, /*allowNames=*/true, &argSpreads);

                // Variadic method call `recv.m(fixed…, pack…)` (no explicit `<…>` — the pack is inferred
                // from the trailing args, like a variadic free function). Resolve the receiver's class,
                // collect the pack into a tuple, and queue the concrete `Owner::m$Tuple$…` instantiation.
                if (gen_->variadicMethodNames.count(member.lexeme)) {
                    std::string recvClass;
                    if (const auto* id = std::get_if<IdentifierExpr>(expression.node.get())) {
                        if (classNames.count(id->name.lexeme) || gen_->classNames.count(id->name.lexeme))
                            recvClass = id->name.lexeme;                     // static form `Class::m(...)`
                        else if (auto t = deduceArgTypeToken(&expression)) recvClass = genericArgBaseName(*t);
                    } else if (auto t = deduceArgTypeToken(&expression)) {
                        recvClass = genericArgBaseName(*t);
                    }
                    std::string baseClass = recvClass.substr(0, recvClass.find('$'));   // Array$Point → Array
                    auto fcIt = gen_->variadicMethodFixedCount.find(baseClass + "::" + member.lexeme);
                    bool positional = true;
                    for (const Token& an : argNames) if (!an.lexeme.empty()) { positional = false; break; }
                    if (!recvClass.empty() && positional && fcIt != gen_->variadicMethodFixedCount.end()) {
                        if (auto mangled = deduceVariadicMethodInstantiation(
                                recvClass, member.lexeme, fcIt->second, args, argSpreads)) {
                            std::vector<Token> posNames(args.size(),
                                Token{ TokenType::IDENTIFIER, "", member.line });   // all positional now
                            expression = makeExpr(MethodCallExpr{
                                box(std::move(expression)),
                                Token{ TokenType::IDENTIFIER, *mangled, member.line },
                                std::move(args), std::move(posNames), safe });
                            continue;
                        }
                    }
                }

                // A non-variadic method/static call can never itself be pack-bearing (packs are
                // free-function/variadic-method only) — unconditionally unwrap any spread.
                for (bool s : argSpreads) if (s) { unwrapSpreadArgs(args, argNames, argSpreads); break; }
                expression = makeExpr(MethodCallExpr{
                    box(std::move(expression)), member, std::move(args), std::move(argNames), safe
                });
            } else {
                expression = makeExpr(MemberAccessExpr{
                    box(std::move(expression)), member, safe
                });
            }
            continue;
        }
        break;
    }
    return expression;
}

Expr Parser::parsePrimary() {
    if (match({ TokenType::THIS })) {
        return makeExpr(ThisExpr{ previous() });
    }

    // The null literal — typed against the expected `T?` in the semantic pass.
    if (match({ TokenType::NULL_LITERAL })) {
        return makeExpr(NullLiteralExpr{ previous() });
    }

    // Switch expression: `switch (x) { case ... -> v; default -> v; }`
    if (match({ TokenType::SWITCH })) {
        return parseSwitchExpr();
    }

    // Match expression: `match (x) { pattern -> v; … }`
    if (match({ TokenType::MATCH })) {
        return parseMatchExpr();
    }

    // Lambda literal: `( … ) -> …` (distinguished from a grouped expression by the trailing `->`).
    if (isLambdaAhead()) {
        return parseLambda();
    }

    // Heap allocation operator: new ClassName(args)  /  new Vec<args>(args)
    if (match({ TokenType::NEW })) {
        Token keyword = previous();
        if (!check(TokenType::IDENTIFIER))
            throw error(peek(), "expected class name after 'new'");
        Token rawName  = advance();
        std::string clsLex = rawName.lexeme;
        if (gen_->classNames.count(rawName.lexeme) && check(TokenType::LESS)) {
            std::vector<std::vector<Token>> typeArgs = parseTypeArgList();
            std::string mangled = mangleInstantiation(rawName.lexeme, typeArgs);
            recordInstantiation(rawName.lexeme, mangled, std::move(typeArgs));
            classNames.insert(mangled);
            clsLex = mangled;
        } else if (classNames.count(rawName.lexeme) == 0) {
            throw error(rawName, "expected class name after 'new'");
        }
        Token className = Token{ TokenType::IDENTIFIER, clsLex, rawName.line };  // construct, not assign
        // `new Point(args)` or `new Point{args}` — braces are an alternate delimiter.
        bool      brace = check(TokenType::LEFT_BRACE);
        if (!brace) consume(TokenType::LEFT_PAREN, "expected '(' or '{' after class name in 'new' expression");
        else        advance();  // consume '{'
        TokenType close = brace ? TokenType::RIGHT_BRACE : TokenType::RIGHT_PAREN;
        // Braces stay positional; parenthesised `new Point(...)` accepts named arguments.
        std::vector<Token> argNames;
        std::vector<bool>  argSpreads;
        std::vector<std::unique_ptr<Expr>> args =
            parseCallArgs(argNames, close, /*allowNames=*/!brace, &argSpreads);
        // A constructor can never itself be pack-bearing (packs are free-function-only) —
        // unconditionally unwrap any spread.
        for (bool s : argSpreads) if (s) { unwrapSpreadArgs(args, argNames, argSpreads); break; }
        return makeExpr(NewExpr{ keyword, className, std::move(args), std::move(argNames) });
    }

    if (match({ TokenType::TRUE, TokenType::FALSE,
                TokenType::NUMBER, TokenType::STRING, TokenType::CHAR })) {
        return makeExpr(LiteralExpr{ previous() });
    }

    // sizeof(Type) — size in bytes of a type, as u64.
    if (match({ TokenType::SIZEOF })) {
        Token keyword = previous();
        consume(TokenType::LEFT_PAREN, "expected '(' after 'sizeof'");
        if (!isTypeName()) throw error(peek(), "expected a type name in 'sizeof'");
        Token typeName = consumeType();
        consume(TokenType::RIGHT_PAREN, "expected ')' after 'sizeof' type");
        return makeExpr(SizeofExpr{ keyword, typeName });
    }

    // destroy(place) — run a destructor on an object/ptr-element lvalue in place (unsafe container
    // primitive; requires --unsafe-ptr). Takes an expression, unlike sizeof which takes a type.
    if (match({ TokenType::DESTROY })) {
        Token keyword = previous();
        consume(TokenType::LEFT_PAREN, "expected '(' after 'destroy'");
        std::unique_ptr<Expr> place = box(parseExpression());
        consume(TokenType::RIGHT_PAREN, "expected ')' after 'destroy' operand");
        return makeExpr(DestroyExpr{ keyword, std::move(place) });
    }

    // addressOf(local) — the raw address of a local variable's/parameter's own storage slot, as a
    // typed ptr<T> (unsafe container/FFI primitive; requires --unsafe-ptr). v1: a bare identifier
    // only, validated further in semantics.
    if (match({ TokenType::ADDRESSOF })) {
        Token keyword = previous();
        consume(TokenType::LEFT_PAREN, "expected '(' after 'addressOf'");
        std::unique_ptr<Expr> place = box(parseExpression());
        consume(TokenType::RIGHT_PAREN, "expected ')' after 'addressOf' operand");
        return makeExpr(AddressOfExpr{ keyword, std::move(place) });
    }

    // Compile-time reflection builtin: @name(args).
    if (match({ TokenType::AT })) return parseReflectExpr();

    if (match({ TokenType::IDENTIFIER })) {
        Token name = previous();
